--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ opt-level = 3
 strip = true
 lto = true
 panic = "abort"
+
+[dependencies]
+rusqlite = "0.28.0"
+json_minimal = "0.1.3"
+# This will be added later on
+# winapi = "0.3.9"
+tar = {version = "0.4.38", optional = true}
+xz = {version = "0.1.0", optional = true}
