--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ json_minimal = "0.1.3"
 # winapi = "0.3.9"
 tar = {version = "0.4.38", optional = true}
 xz = {version = "0.1.0", optional = true}
+
+[features]
+package-data = ["dep:tar", "dep:xz"]
