--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ lto = true
 panic = "abort"
 
 [dependencies]
-rusqlite = "0.28.0"
+rusqlite = {version = "0.28.0", features = ["blob"]}
 json_minimal = "0.1.3"
 # This will be added later on
 # winapi = "0.3.9"
