--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ panic = "abort"
 [dependencies]
 rusqlite = {version = "0.28.0", features = ["blob"]}
 json_minimal = "0.1.3"
+glob = "0.3.0"
 # This will be added later on
 # winapi = "0.3.9"
 tar = {version = "0.4.38", optional = true}
