--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ panic = "abort"
 [dependencies]
 json_minimal = "0.1.3"
 glob = "0.3.0"
-# This will be added later on
-# winapi = "0.3.9"
+winapi = "0.3.9"
 rusqlite = {version = "0.28.0", features = ["bundled", "blob"]}
 tar = {version = "0.4.38", optional = true}
 xz = {version = "0.1.0", optional = true}
